syntax = "proto3";

package distr.io;

// ======== GENERAL MESSAGE OBJECTS ========

message NodeMeta {
    string instance = 1;

    string uuid = 2;

    string dtype = 3;

    repeated int64 shape = 4;
}

// ======== REQUEST + RESPONSE MESSAGES ========

message ListNodesRequest {
    repeated string uuids = 1;
}

message ListNodesResponse {
    repeated NodeMeta values = 1;
}

service DistrInOut {
    // List all nodes matching request parameters
    rpc ListNodes (ListNodesRequest) returns (ListNodesResponse);
}
